--- a/style.css
+++ b/style.css
@@ -25,9 +25,9 @@ ul {
 }
 li {
     margin-right: 1em;
-    text-transform: uppercase;
     font-size: 0.8125rem;
     font-weight: 600;
+    text-transform: uppercase;
 }
 .logo-icon {
     width: 24px;
@@ -42,6 +42,7 @@ li {
 .hero-section {
     background: url("https://images.unsplash.com/photo-1604964432806-254d07c11f32?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1480&q=80") center/cover no-repeat;
     color: #FFFFFF;
+    margin-bottom: 1em;
 }
 .main-article {
     display: flex;
@@ -67,17 +68,39 @@ li {
     font-size: 1rem;
 }
 /* posts */
+.posts {
+    display: grid;
+    grid-template-columns: 1fr /repeat(4, 1fr);
+}
 .post {
     padding: 1em;
-
 }
 .posts-img {
     width: 100%;
 }
 button {
-    display: block;
+    border: none;
+    background: transparent;
 
 }
+.btn {
+    display: block;
+    grid-column: 1/-1;
+    text-decoration: underline;
+    font-weight: 700;
+    font-family: inherit;
+    font-size: 1rem;
+    margin-bottom: 1.875em;
+}
+
+.posts-date,
+.posts-text{
+    margin: 0.5em 0em;
+}
+.posts-heading {
+    margin: 0;
+}
+/* footer */
 footer {
     padding: 50px;
     background-color: #202020;
