--- a/home.css
+++ b/home.css
@@ -3,6 +3,7 @@ body {
     padding: 0;
     box-sizing: border-box;
     font-family: 'Source Sans Pro', sans-serif;
+    background-color: rgb(250,250,250);
 }
 /* header */
 header
@@ -20,13 +21,11 @@ nav {
     justify-content: space-between;
     position: relative;
 }
-/* ul {
-    display: none;
-} */
-ul{
+.active{
     width: 100%;
     position: absolute;
     top: 60px;
+    padding: 0;
     margin-top: 0;
     text-align: center;
     background-color: rgba(255, 255, 255,0.7);
@@ -101,7 +100,6 @@ i {
 button {
     border: none;
     background: transparent;
-
 }
 .btn {
     display: block;
@@ -112,19 +110,21 @@ button {
     font-size: 1rem;
     margin-bottom: 1.875em;
 }
-
+.posts-date {
+    font-size: 0.875rem;
+}
 .posts-date,
 .posts-text{
     margin: 0.5em 0em;
     color: #505050;
-
 }
 .posts-heading {
     margin: 0;
+    font-size: 1.5rem;
 }
 /* footer */
 footer {
-    padding: 50px;
+    padding: 2.5rem;
     background-color: #202020;
     color: #FFFFFF;
     text-align: center;
@@ -134,8 +134,16 @@ footer {
     font-size: 0.75rem;
 }
 @media (min-width: 600px){
+    nav,
+    section{
+        max-width: 1200px;
+        margin: 0 auto;
+    }
     .logo-text {
         font-size: 1.25rem;
+    }
+    .toggle-btn {
+        visibility: hidden;
     }
     .main-article {
         min-height: 488px;
