--- a/about.css
+++ b/about.css
@@ -76,12 +76,16 @@ h2 {
     font-size: 1rem;
     margin-top: 0;
 }
+h3 {
+    text-align: center;
+    margin-top: 0;
+}
 .main-section-text{
     margin-bottom: 0;
 }
 .container{
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template: auto auto auto/ 1fr;
     padding: 20px;
 }
 article {
@@ -101,7 +105,6 @@ article {
 /* button {
     border: none;
     background: transparent;
-
 }
 .btn {
     display: block;
@@ -119,7 +122,6 @@ article {
 .posts-text{
     margin: 0.5em 0em;
     color: #505050;
-
 }
 .posts-heading {
     margin: 0;
@@ -131,15 +133,17 @@ footer {
     background-color: #202020;
     color: #FFFFFF;
     text-align: center;
+    margin-bottom: 0;
 }
 .footer-text {
     margin: 0;
     font-size: 0.75rem;
 }
-/* @media (min-width: 600px){
+@media (min-width: 600px){
+    /* navbar */
     nav,
     section{
-        max-width: 1200px;
+        max-width: 1000px;
         margin: 0 auto;
     }
     .logo-text {
@@ -148,23 +152,32 @@ footer {
     .toggle-btn {
         visibility: hidden;
     }
-    .main-article {
-        min-height: 488px;
-        padding: 3.125em 3.687em;
+    /* main section */
+    .container{
+    grid-template-columns: 200px auto;
+    grid-template-areas: 
+    "img heading"
+    "img someText";
     }
-    .main-article-heading{
-        font-size: 2.5rem;
+    .my-img{
+        grid-area: img;
     }
-    .main-article-date{
-        font-size: 1rem;
+    h1 {
+        grid-area: heading;
+        align-self: center;
+        font-size: 2.25rem;
     }
-    .main-article-text {
-        max-width: 65%;
-        font-size: 1.125rem;
+    h2, h3 {
+        font-size: 1.25rem;
     }
+    .main-section-text {
+        grid-area: someText;
+    }
+
+/* posts section */
     .posts {
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
         padding: 2em 3.125em;
     }
-} */
+}
