--- a/home.css
+++ b/home.css
@@ -11,6 +11,9 @@ header
     max-width: 390px;
     margin: 0 auto;
 }
+li {
+    list-style: none;
+}
 nav,
 .logo {
     display: flex;
@@ -29,9 +32,6 @@ nav {
     margin-top: 0;
     text-align: center;
     background-color: rgba(255, 255, 255,0.7);
-}
-li {
-    list-style: none;
 }
 .nav-link {
     font-size: 0.9rem;
@@ -52,6 +52,7 @@ i {
     letter-spacing: -0.03em;
     font-size: 0.9rem;
     margin-left: 0.4em;
+    letter-spacing: -4%;
     font-family: 'Roboto', sans-serif;
 }
 .hidden {
@@ -139,11 +140,29 @@ footer {
         max-width: 1000px;
         margin: 0 auto;
     }
+    ul .nav-link{
+        font-size: 1.124rem;
+        color: #202020;
+        font-weight: 800;
+        text-shadow: none;
+    }
+    .logo {
+        width: 45%;
+    }
+    .active {
+        display: flex;
+        justify-content: end;
+        align-items: center;
+        position: relative;
+        top: 8%;
+        gap: 3em;
+        background-color: rgb(250,250,250);
+    }
     .logo-text {
         font-size: 1.25rem;
     }
     .toggle-btn {
-        visibility: hidden;
+        display: none;
     }
     .main-article {
         min-height: 488px;
